--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - docker version
+      - systemctl start docker
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION 
       - REPOSITORY_URI=842822433843.dkr.ecr.ap-south-1.amazonaws.com/firstprivaterepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
