--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,9 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
+      - systemctl status docker
+      - systemctl restart docker
       - docker version
-      - systemctl start docker
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION 
       - REPOSITORY_URI=842822433843.dkr.ecr.ap-south-1.amazonaws.com/firstprivaterepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
