--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - service docker status
-      - service docker restart
+      - systemctl start docker
+      - systemctl status docker
       - docker version
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION 
       - REPOSITORY_URI=842822433843.dkr.ecr.ap-south-1.amazonaws.com/firstprivaterepo
